--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,18 +11,20 @@ body {
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    height: 100%;
 }
 
 
 
 .container {
-    height: 100vh
+    height: 100vh;
 }
 
 h1 {
     font-family: "Cairo";
     font-size: 3rem;
     margin-top: 0;
+    margin-bottom: .1rem;
     text-transform: uppercase;
 }
 
@@ -44,4 +46,47 @@ h2 {
     font-size: 1rem;
 }
 
+.scrollable{
+    overflow-y:scroll !important;
+}
+
+
+.full-h{
+    height: 100vh;
+}
+
+
+
+.sidenav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+}
+
+.txt-toolbar{
+    font-family: "Cairo";
+    font-size: 1.2rem;
+    margin-top: 0;
+    font-weight: 800;
+    text-transform: uppercase;
+}
+
+.cv-photo{
+    border-radius: 50%;
+    width: 7rem;
+    height: 7rem;
+    border-color: red;
+    border: .5rem solid rgba(255,255,255,.2);
+    
+}
+
+.cv-photo-ico{
+    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+    border-color: red;
+    border: .1rem solid rgba(255,255,255,.2);
+    
+}
 
