--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -12,3 +12,8 @@
     {{this.store.cvData.profile.city}} {{this.store.cvData.profile.phone}}
     <a [href]="this.store.cvData.profile.mail" class='text-primary'> {{this.store.cvData.profile.mail}}</a>
 </div>
+
+
+<p>
+    {{this.store.cvData.profile.summary}}
+</p>
