--- a/src/app/components/education/education.component.scss
+++ b/src/app/components/education/education.component.scss
@@ -1,11 +1,11 @@
 .card-education {
     margin: .3rem;
-    width: 85vw;
+    width: 80vw;
     display: inline-flex;
     flex-flow: column wrap;
 }
 
 .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    // background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
 }
