--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,9 +17,14 @@ body {
 
 
 .container {
-    height: 100vh;
+    min-height: 100vh;
 }
 
+p {
+    font-family: "Cairo";
+    font-size: 1.2rem;
+    margin-top: 0;
+}
 h1 {
     font-family: "Cairo";
     font-size: 3rem;
@@ -46,13 +51,12 @@ h2 {
     font-size: 1rem;
 }
 
-.scrollable{
-    overflow-y:scroll !important;
-}
+
 
 
 .full-h{
     height: 100vh;
+    padding: 2vw;
 }
 
 
@@ -90,3 +94,7 @@ h2 {
     
 }
 
+
+mat-list-item {
+    font-family: "Cairo" !important;
+}
