--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,18 +29,24 @@
     <mat-sidenav-content>
 
         <!-- ABOUT  -->
-        <div fxLayout="column" fxLayout.xs="column" fxLayoutAlign="center" class="full-h">
+        <div fxLayout="column wrap" fxLayout.xs="column" fxLayoutAlign="center" class="full-h">
             <app-about></app-about>
         </div>
 
         <!-- EXPERIENCES -->
-        <div fxLayout="column" fxLayout.xs="column" fxLayoutAlign="center" class="full-h">
+        <div fxLayout="column wrap" fxLayout.xs="column" fxLayoutAlign="center" class="full-h">
             <app-experiences></app-experiences>
         </div>
 
         <!-- EDUCATION -->
-        <div fxLayout="column" fxLayout.xs="column" fxLayoutAlign="center" class="full-h">
+        <div fxLayout="column wrap" fxLayout.xs="column" fxLayoutAlign="center" class="full-h">
             <app-education></app-education>
+        </div>
+
+
+        <!-- SKILLS -->
+        <div fxLayout="column wrap" fxLayout.xs="column" fxLayoutAlign="center" class="full-h">
+            <app-skills></app-skills>
         </div>
 
 
