--- a/src/app/components/experiences/experiences.component.scss
+++ b/src/app/components/experiences/experiences.component.scss
@@ -1,6 +1,6 @@
 .card-experience {
     margin: .3rem;
-    width: 80vw;
+    // width: 80vw;
     display: inline-flex;
     flex-flow: column wrap;
 }
