--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,7 @@ p {
     font-size: 1.2rem;
     margin-top: 0;
 }
+
 h1 {
     font-family: "Cairo";
     font-size: 3rem;
@@ -54,7 +55,7 @@ h2 {
 
 
 
-.full-h{
+.full-h {
     height: 100vh;
     padding: 2vw;
 }
@@ -68,7 +69,7 @@ h2 {
     width: 200px;
 }
 
-.txt-toolbar{
+.txt-toolbar {
     font-family: "Cairo";
     font-size: 1.2rem;
     margin-top: 0;
@@ -76,25 +77,28 @@ h2 {
     text-transform: uppercase;
 }
 
-.cv-photo{
+.cv-photo {
     border-radius: 50%;
     width: 7rem;
     height: 7rem;
     border-color: red;
-    border: .5rem solid rgba(255,255,255,.2);
-    
+    border: .5rem solid rgba(255, 255, 255, .2);
+
 }
 
-.cv-photo-ico{
+.cv-photo-ico {
     border-radius: 50%;
     width: 2rem;
     height: 2rem;
     border-color: red;
-    border: .1rem solid rgba(255,255,255,.2);
-    
+    border: .1rem solid rgba(255, 255, 255, .2);
+
 }
 
 
 mat-list-item {
     font-family: "Cairo" !important;
+    // font-size: 0.9rem !important;
+
 }
+
