--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* google fonts */
-@import url('//fonts.googleapis.com/css?family=Cairo&display=swap');
+@import 'assets/fonts/external_fonts.css';
 
 /* You can add global styles to this file, and also import other style files */
 
