add ➕ :  social links

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,3 @@
-
 <h1>
     {{this.store.cvData.profile.firstname}}
     <span class="text-primary">{{this.store.cvData.profile.lastname}}</span>
@@ -17,3 +16,11 @@
 <p>
     {{this.store.cvData.profile.summary}}
 </p>
+
+<!-- <div class="bottom-right" *ngFor="let item of this.store.cvData.social">
+    <a [href]="item.link">
+        <fa-icon [icon]="item.icon" class="fa-3x"></fa-icon>
+    </a>
+</div> -->
+
+
