--- a/src/styles.scss
+++ b/src/styles.scss
@@ -115,3 +115,14 @@ mat-list-item {
     -moz-hyphens: auto !important;
     hyphens: auto !important;
 }
+
+
+
+
+
+.social {
+    color : rgba(255, 255, 255, .7) !important;
+    
+}
+
+
