--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,17 @@
         <div fxFlex fxLayout="column" fxLayoutGap="0px" fxLayoutAlign="center center" class="container">
             <!-- content here -->
             <div fxLayout=" wrap">
-
                 <div fxFlex="25" fxLayout="column" style="padding: 5px;">
                     <img [src]="store.cvData.profile.photo" alt="cv-photo" class="cv-photo">
+                </div>
+
+            </div>
+            <!--  SOCIAL -->
+            <div fxLayout fxLayout.xs="row" fxLayoutGap="0.5vw" fxLayoutGap.xs="1vw">
+                <div class="bottom-right" *ngFor="let item of this.store.cvData.social">
+                    <a [href]="item.link" class="social">
+                        <fa-icon [icon]="item.icon" class="fa-lg"> </fa-icon>
+                    </a>
                 </div>
             </div>
         </div>
@@ -49,7 +57,14 @@
             <app-skills></app-skills>
         </div>
 
-
+        <!--  SOCIAL -->
+        <div *ngIf="!openedSidenav" fxLayout fxLayout.xs="row" fxLayoutGap="1vw" fxLayoutAlign="center center" fxLayoutGap.xs="10vw">
+            <div class="bottom-right" *ngFor="let item of this.store.cvData.social">
+                <a [href]="item.link" class="social">
+                    <fa-icon [icon]="item.icon" class="fa-lg"> </fa-icon>
+                </a>
+            </div>
+        </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
 
