--- a/src/styles.scss
+++ b/src/styles.scss
@@ -96,10 +96,9 @@ h2 {
 }
 
 
-mat-list-item {
+.p-list {
     font-family: "Cairo" !important;
-    // font-size: 0.9rem !important;
-
+    font-size: 1rem !important;
 }
 
 
@@ -132,4 +131,17 @@ mat-list-item {
 
 .toolbar-icon {
     padding: 0 2vw;
+}
+
+
+.card-element {
+    margin: .3rem;
+    // width: 80vw;
+    display: inline-flex;
+    flex-flow: column wrap;
+}
+
+.example-header-image {
+    background-size: cover;
+    background-position: center center;
 }
