--- a/src/app/components/experiences/experiences.component.html
+++ b/src/app/components/experiences/experiences.component.html
@@ -9,7 +9,7 @@
             <h1>
                 EXPERIENCES
             </h1>
-            <mat-card *ngFor="let ex of store.cvData.experiences" class="card-experience card-text">
+            <mat-card *ngFor="let ex of store.cvData.experiences" class="card-element card-text">
                 <mat-card-header>
                     <div mat-card-avatar class="example-header-image"
                         [style.background-image]="'url(' + ex.picture + ')'">
@@ -27,10 +27,15 @@
                     </mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
-                    <mat-list >
-                        <mat-list-item  *ngFor="let task of ex.description"> - {{task}}</mat-list-item>
+                    
+                        <!-- <mat-list-item  *ngFor="let task of ex.description"> - {{task}}</mat-list-item> -->
 
-                    </mat-list>
+                        <p *ngFor="let task of ex.description" class="p-list"> ➡️ {{task}}</p>
+                        
+                        
+
+                    
+                    
                 </mat-card-content>
                 <mat-card-actions>
 
